--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         mavenCentral()
         maven {
             name = "forge"
-            url = "http://files.minecraftforge.net/maven"
+            url = "https://files.minecraftforge.net/maven"
         }
         maven {
             name = "sonatype"
@@ -23,10 +23,10 @@ group = "guichaguri.betterfps"
 archivesBaseName = "BetterFps"
 
 minecraft {
-    version = "1.12.1"
+    version = "1.12.2"
     runDir = "run"
     tweakClass = "guichaguri.betterfps.tweaker.BetterFpsTweaker"
-    mappings = "snapshot_20170624"
+    mappings = "snapshot_20180814"
 
     at 'betterfps_at.cfg'
 }
@@ -50,7 +50,7 @@ compileJava {
 dependencies {
     //compile 'org.ow2.asm:asm-debug-all:5.0.3'
     //compile 'net.minecraft:launchwrapper:1.12'
-    shade 'com.eclipsesource.minimal-json:minimal-json:0.9.4'
+    shade 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
     testCompile 'junit:junit:4.12'
 }
 
@@ -100,16 +100,16 @@ String srgOutput = 'src/main/resources/betterfps.srg'
  * You might have to update the input file when the mappings version change.
  */
 task updateMappings(dependsOn: 'genSrgs') {
-    File notchToMcp = tasks['genSrgs'].getNotchToMcp();
+    File notchToMcp = tasks['genSrgs'].getNotchToMcp()
     if(!notchToMcp.exists()) {
         println 'SRG file does not exist yet.'
-        return;
+        return
     }
 
-    def classes = [:];
-    def fields = [:];
-    def methods = [:];
-    def i = 0;
+    def classes = [:]
+    def fields = [:]
+    def methods = [:]
+    def i = 0
 
     println 'Searching mappings to update'
     String[] reqMapping = file(srgInput).readLines()
@@ -117,12 +117,12 @@ task updateMappings(dependsOn: 'genSrgs') {
         String[] mapping = it.split(' ')
         if(it.startsWith('#')) {
             // Comment
-        } else if(mapping[0].equals('CL:')) { // Class
-            if(mapping.length >= 2) classes.put(mapping[2], mapping[1]);
-        } else if(mapping[0].equals('FD:')) { // Field
-            if(mapping.length >= 2) fields.put(mapping[2], mapping[1]);
-        } else if(mapping[0].equals('MD:')) { // Method
-            if(mapping.length >= 3) methods.put(mapping[2] + mapping[3], mapping[1]);
+        } else if(mapping[0] == 'CL:') { // Class
+            if(mapping.length >= 2) classes.put(mapping[2], mapping[1])
+        } else if(mapping[0] == 'FD:') { // Field
+            if(mapping.length >= 2) fields.put(mapping[2], mapping[1])
+        } else if(mapping[0] == 'MD:') { // Method
+            if(mapping.length >= 3) methods.put(mapping[2] + mapping[3], mapping[1])
         }
     }
     println 'Updating mappings'
@@ -130,24 +130,24 @@ task updateMappings(dependsOn: 'genSrgs') {
         String[] mappings = notchToMcp.readLines()
         mappings.each {
             String[] mapping = it.split(' ')
-            if (mapping[0].equals('CL:')) { // Class
+            if (mapping[0] == 'CL:') { // Class
                 if(mapping.length >= 3 && classes.containsKey(mapping[2])) {
                     out.println it + ' ' + classes.get(mapping[2])
                     i++
                 }
-            } else if(mapping[0].equals('FD:')) { // Field
+            } else if(mapping[0] == 'FD:') { // Field
                 if(mapping.length >= 3 && fields.containsKey(mapping[2])) {
                     out.println it + ' ' + fields.get(mapping[2])
                     i++
                 }
-            } else if(mapping[0].equals('MD:')) { // Method
+            } else if(mapping[0] == 'MD:') { // Method
                 if(mapping.length >= 5 && methods.containsKey(mapping[3] + mapping[4])) {
                     out.println it + ' ' + methods.get(mapping[3] + mapping[4])
                     i++
                 }
             }
         }
-        def entries = classes.size() + fields.size() + methods.size();
+        def entries = classes.size() + fields.size() + methods.size()
         println 'Done. Updated ' + i + '/' + entries + ' entries'
         if(i < entries) println 'WARNING: ' + (entries - i) + ' entries were not found! You should check them'
     }
